# openhealth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  EXTENDING.md  GOAL.md  LICENSE  MANIFEST.md  Makefile  README.md  SOURCES.md  TASKS.md  package.json  plan.md  pyproject.toml  setup.sh  status.md  tsconfig.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
deploy/: .env.example  Caddyfile  docker-compose.yml  openhealth-entrypoint.sh  openhealth.Dockerfile
docs/: COMMANDS.md  INTEGRATIONS.md  SELF-HOST.md  START-HERE.en.md  START-HERE.md  TELEGRAM.md  mcp.md  scheduler.md
health_os/: __init__.py  bot.py  cli.py  config.py  contexts.py  parsers.py  weather.py  whoop.py
kit/: HANDOUT.md  registry.yaml  start.html
openhealth/: __init__.py  _certs.py  agent_memory.py  ask.py  bot.py  circadian.py  cli.py  clinical_optima.py  config.py  contexts.py  data_quality.py  environment.py  evidence.py  google_calendar.py  index.py  ingest.py  insights.py  intake_medical.py  journal_behaviors.py  journal_store.py  lab_normalization.py  lab_panel.py  mcp_server.py  metadata.py  models.py  params.py  parsers.py  privacy.py  protocols.py  providers.py  reference_ranges.py  scheduler.py  storage.py  telegram_bot.py  weather.py  weather_insights.py  whoop.py  workout_notes.py
rfcs/: 002-community-contribution-model.md  003-proof-layer.md  _template.md
schemas/: artifact-manifest.schema.json  canonical-record.schema.json  health-sync.schema.json  intake-envelope.schema.json  source-manifest.schema.json
scripts/: health-sync.plist  (+2 more)
(+251 files in other folders)
