[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openhealth"
version = "0.1.0"
description = "Local-first personal health knowledge base and ingestion pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenHealth Contributors" }]
dependencies = []

[project.optional-dependencies]
bot = [
    "python-telegram-bot[webhooks]>=21.0",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
openhealth = "openhealth.cli:main"

[tool.setuptools.packages.find]
include = ["openhealth*"]

[tool.setuptools.package-data]
openhealth = ["data/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
